...
    let bag = DisposeBag()
    var tapAction: Observable<String>?
    
    private lazy var okButton: UIButton = {
       let button = UIButton(type: .custom)
        button.frame = .zero
        button.setTitle("ok", for: .normal)
        button.backgroundColor = .orange
        return button
    }()
    
     lazy var title1: UILabel = {
        let label = UILabel.init(frame: .zero)
...
